--- a/Client/garagespotter/src/pages/Login/login.module.scss
+++ b/Client/garagespotter/src/pages/Login/login.module.scss
@@ -42,7 +42,42 @@
       }
     }
   }
-  
+  .passwordInputWrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.passwordInput {
+    flex-grow: 1;
+    padding: 0.75rem;
+    padding-right: 40px; // Space for toggle button
+    border: 1px solid #e2e8f0;
+    border-radius: 4px;
+    font-size: 1rem;
+
+    &:focus {
+        outline: none;
+        border-color: #4299e1;
+        box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.2);
+    }
+}
+
+.passwordToggle {
+    position: absolute;
+    right: 10px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #718096;
+    
+    &:hover {
+        color: #4299e1;
+    }
+}
   .submitButton {
     padding: 0.75rem;
     background-color: #4299e1;
