--- a/Client/garagespotter/src/index.scss
+++ b/Client/garagespotter/src/index.scss
@@ -1,4 +1,9 @@
 // index.scss
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
     font-family: "Afacad Flux", sans-serif;
     margin: 0;
