--- a/Client/garagespotter/src/pages/Home/map/mapSidebar/mapsidebar.module.scss
+++ b/Client/garagespotter/src/pages/Home/map/mapSidebar/mapsidebar.module.scss
@@ -10,6 +10,11 @@
     z-index: 1001;
     overflow-y: auto;
     overflow-x: hidden;
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+    ::-webkit-scrollbar {
+        display: none; /* Chrome, Safari, and Opera */
+    }
     @media (max-width: 768px) {
         width: 100% !important;
         left: -100% !important;
@@ -73,16 +78,20 @@
         height: 55px;
         border-radius: 5px;
         box-shadow: 1px 2px 1px rgb(132, 131, 131);
-        background-color: rgba(255, 255, 255, 0.9);
+        background-color: rgba(255, 255, 255);
         cursor: pointer;
         z-index: 1001;
+        padding: 15px;
+        color: blue;
     }
 
     .sidebarContent {
         padding: 20px;
         overflow-y: auto;
         background-color:rgba(26, 115, 232, 0.05);
-
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
 
             /* Hide the scrollbar */
         -ms-overflow-style: none; /* Internet Explorer 10+ */
@@ -90,10 +99,15 @@
         ::-webkit-scrollbar {
             display: none; /* Chrome, Safari, and Opera */
         }
+        h2{
+            text-wrap: wrap ;
+            width: 80%;
+        }
         .contentDescription{
             width: 100%;
             display: grid;
             grid-template-columns: auto auto ;
+            grid-gap: 5px;
             p{
                 align-items: center;
                 justify-content: space-between;
@@ -122,6 +136,7 @@
                 overflow-x: auto; // Horizontal scrolling for the images
                 gap: 10px;
                 scroll-behavior: smooth;
+                height: 360px;
         
                 img {
                     flex: 0 0 80%; // Increased size of images within the slider
